# anyclaw

./: README.md  pyproject.toml  requirements.txt
.trae/rules/: python.mdc
agent/: reactagent.py
api/: main.py  server.py
cli/: clear_utils.py  display.py  interactive.py  main.py  skills_ui.py
config/: model.yaml
copilot/: __init__.py  app.js  index.html  server.py  styles.css
model/: factory.py
prompt/: ltm_extractor_prompt.txt  system_prompt.txt
scripts/: run_cli_runner.py  run_file_manager.py  run_read_skills.py
skills/pdf/: SKILL.md
skills/pdf/scripts/: pdf_tool.py
skills/xlsx/: SKILL.md
skills/xlsx/scripts/: xlsx_tool.py
tools/: __init__.py  cli_runner.py  file_manager.py  read_skills.py  skill_download.py
utils/: ltm_manager.py  message_utils.py  path.py  prompt_loader.py  session_manager.py  skill_registry.py
