[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anyclaw"
version = "0.1.0"
description = "anyclaw：agent框架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "dashscope>=1.20.0",
    "colorama>=0.4.6",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
]

[project.scripts]
anyclaw-cli = "cli.main:main"
anyclaw-api = "api.main:main"
anyclaw-copilot = "copilot.server:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Pydantic V1.*isn't compatible with Python 3.14.*:UserWarning:langchain_core.*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "agent*", "api*", "copilot*", "config*", "model*", "tools*", "utils*", "mcps*", "prompt*", "skills*", "scripts*"]

[tool.setuptools.package-data]
copilot = ["*.html", "*.css", "*.js"]
